--- a/game.html
+++ b/game.html
@@ -4,23 +4,7 @@
     <meta charset="UTF-8">
     <title>Car Service Game</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <style>
-        body {
-            background-color: #343a40;
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
-        }
-        canvas {
-            background: #555;
-            border: 3px solid white;
-            box-shadow: 0 0 20px rgba(255,255,255,0.5);
-        }
-    </style>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
