--- a/home.html
+++ b/home.html
@@ -5,10 +5,13 @@
     <title>Car Service Game</title>
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
     
     <div>
         <h1 class="title">Welcome to Get Your Car Serviced </h1>
-        <p class="subtitle">Collect parts. Avoid Car Crashes and Breakdowns. Get you car serviced </p>
+        <p class="subtitle">Collect parts. Avoid Car Crashes and Breakdowns. Get you car serviced!</p>
+
+        <a href="game.html" class="btn menu-button">Start Game</a>
     </div>
 
 </body>
