--- a/game.html
+++ b/game.html
@@ -124,7 +124,7 @@
     let enemies = [];
 
     const player = {
-        width: 100,
+        width: 80,
         height: 100,
         lane: 2,
         image: new Image()
@@ -133,7 +133,7 @@
 
     function spawnEnemy() {
         const enemy = {
-            width: 100,
+            width: 80,
             height: 100,
             lane: Math.floor(Math.random() * laneCount),
             y: -100,
@@ -142,7 +142,7 @@
         enemy.image.src = 'BadCar.png';
         enemies.push(enemy);
 
-        const randomInterval = Math.random() * 3000 + 1000; // 1-4 seconds
+        const randomInterval = Math.random() * 750; // 0-1 seconds
         setTimeout(spawnEnemy, randomInterval);
     }
 
