--- a/game.html
+++ b/game.html
@@ -4,64 +4,9 @@
     <meta charset="UTF-8">
     <title>Car Service Game</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #343a40;
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: relative;
-            overflow: hidden;
-        }
-        .game-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        canvas {
-            background: #555;
-            border: 3px solid white;
-            box-shadow: 0 0 20px rgba(255,255,255,0.5);
-        }
-        .array-column {
-            position: absolute;
-            top: 50%;
-            right: 50px;
-            transform: translateY(-50%);
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-        .array-item {
-            width: 80px;
-            height: 80px;
-            background-color: #6c757d;
-            border: 2px solid white;
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-weight: bold;
-            font-size: 18px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        .array-item:hover {
-            background-color: #adb5bd;
-        }
-        .inventory-controls {
-            position: absolute;
-            right: 50px;
-            bottom: 50px;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="main.css">
 </head>
+
 
 <body>
 
