--- a/home.html
+++ b/home.html
@@ -9,6 +9,9 @@
 <body>
 
 <div>
+    <!-- Logo added here -->
+    <img src="Pit Stop.png" alt="Pit Stop Logo" class="game-logo">
+
     <h1 class="title">Welcome to Get Your Car Serviced</h1>
     <p class="subtitle">Collect parts. Avoid Car Crashes and Breakdowns. Get your car serviced!</p>
 
