--- a/game.html
+++ b/game.html
@@ -20,6 +20,16 @@
     Total Money: $500
 </div>
 
+<div id="snackbar">You Got Hit!</div>
+
+<!-- Modal -->
+<!-- <div id="popupModal" class="modal">
+    <div class="modal-content">
+      <p>You have 6 items!</p>
+      <button onclick="closeModal()">OK</button>
+    </div>
+</div> -->
+
 <script>
     const partImages = ['tire.png', 'oil.png', 'brake.png', 'battery.png', 'wrench.png','headlight.png'];
 
@@ -28,7 +38,6 @@
 
     const inventory = document.getElementById('inventory');
     let items = [];
-
     let totalMoney = 500; // Track money
     let collisionDetected = false; // Flag to prevent multiple subtractions per frame
 
@@ -105,7 +114,7 @@
         enemy.image.src = 'BadCar.png';
         enemies.push(enemy);
 
-        const randomInterval = Math.random() * 3000 + 1000; // 0-1 seconds
+        const randomInterval = Math.random() * 1000; // 0-1 seconds
         setTimeout(spawnEnemy, randomInterval);
     }
 
@@ -123,7 +132,7 @@
 
     // If no lanes are available, skip spawning
     if (availableLanes.length === 0) {
-        const randomInterval = Math.random() * 3000 + 2000; 
+        const randomInterval = Math.random() * 500; 
         setTimeout(spawnPart, randomInterval);
         return;
     }
@@ -260,7 +269,15 @@ function drawParts() {
     });
 }
 
+function closeModal() {
+    document.getElementById("popupModal").style.display = "none";
+}
 
+function myFunction() {
+  var x = document.getElementById("snackbar");
+  x.className = "show";
+  setTimeout(function(){ x.className = x.className.replace("show", ""); }, 1500);
+}
 
     function gameLoop() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
@@ -273,21 +290,31 @@ function drawParts() {
 
 
         if (collision() && !collisionDetected) {
-            totalMoney -= 100; // Subtract money only once per collision
-            updateMoney();
+            myFunction();
+            if(items.length > 0){
+                items.pop();
+                renderInventory();
+            } else {
+                totalMoney -= 100; // Subtract money only once per collision
+                updateMoney();
+            }
             collisionDetected = true; // Mark collision as detected
 
             if (totalMoney <= 0) {
                 alert("Game Over! 🚗💥");
                 return;
             }
-        }
+        } 
 
         // Reset the collision flag if no collision is detected
         if (!collision()) {
             collisionDetected = false;
         }
 
+        // if(items.length() == 6){
+        //     document.getElementById("popupModal").style.display = "block";
+        // }
+        
         requestAnimationFrame(gameLoop);
     }
 
