--- a/home.html
+++ b/home.html
@@ -12,8 +12,8 @@
     <!-- Logo added here -->
     <img src="Pit Stop.png" alt="Pit Stop Logo" class="game-logo">
 
-    <h1 class="title">Welcome to Get Your Car Serviced</h1>
-    <p class="subtitle">Collect parts. Avoid Car Crashes and Breakdowns. Get your car serviced!</p>
+    <h1 class="title">Welcome to Pit Stop Panic/h1>
+    <p class="subtitle">Collect parts. Avoid Car Crashes and Breakdowns. And finally get your car serviced!</p>
 
     <a href="game.html" class="btn menu-button">Start Game</a>
     <a href="instructions.html" class="btn menu-button">Instructions</a>
