--- a/game.html
+++ b/game.html
@@ -315,7 +315,7 @@
                 items.pop();
                 renderInventory();
             } else {
-                totalMoney -= 1000; // Subtract money only once per collision
+                totalMoney -= 1000; // hSubtract money only once per collision
                 updateMoney();
             }
             collisionDetected = true;
