--- a/game.html
+++ b/game.html
@@ -68,7 +68,7 @@
 <div id="popupModal1" class="modal">
     <div class="modal-content">
       <p>You have lost! Try Again!</p>
-      <a href="home.html" class="btn menu-button">Ok</a>    </div>
+      <a href="game.html" class="btn menu-button">Ok</a>    </div>
 </div>
 <script>
     const partImages = ['tire.png', 'oil.png', 'brake.png', 'battery.png', 'wrench.png','headlight.png'];
